yaml_parser/tests/fail/invalid-item-after-end-of-flow-sequence.snap
---
source: yaml_parser/tests/fail.rs
---
parse error at line 5, column 1
  |
5 | invalid item
  | ^
expected `...`
